<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="5dp"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">


        <com.google.android.material.card.MaterialCardView
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/feed"
            android:onClick="detection"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                >
                <ImageView
                    android:src="@drawable/camera"
                    android:layout_height="80dp"
                    android:layout_width="80dp"
                    android:padding="15dp"
                    android:background="@drawable/green_circle"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/online"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"
                    />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/online"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:onClick="monitoring"
                >
                <ImageView
                    android:src="@drawable/monitoring"
                    android:layout_height="80dp"
                    android:layout_width="80dp"
                    android:padding="15dp"
                    android:background="@drawable/orange_circle"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/monitoring"
                    android:textColor="@color/orange"
                    android:textSize="20dp"
                    />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">


        <com.google.android.material.card.MaterialCardView
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/ask"
            android:onClick="ask"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                >
                <ImageView
                    android:src="@drawable/plant"
                    android:layout_height="80dp"
                    android:layout_width="80dp"
                    android:onClick="ask"
                    android:padding="15dp"
                    android:background="@drawable/purple_circle"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/agronomist"
                    android:textColor="@color/purple"
                    android:textSize="20dp"
                   />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/Control"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:onClick="all"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                >
                <ImageView
                    android:src="@drawable/analysis"
                    android:layout_height="80dp"
                    android:layout_width="80dp"
                    android:padding="15dp"
                    android:background="@drawable/light_green"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="আবহাওয়া"
                    android:textColor="@color/light_green"
                    android:textSize="20dp"
                    />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">


        <com.google.android.material.card.MaterialCardView
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/analysis"
            android:onClick="portals"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                >
                <ImageView
                    android:src="@drawable/agronomist"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:padding="15dp"
                    android:background="@drawable/holo_unknown"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/unknown"
                    android:text="@string/portal"
                    android:textSize="20dp"
                    />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>



    </LinearLayout>





</LinearLayout>











